--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/lslstrength.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./fonts/material-icons.css">
+    <link rel="stylesheet" href="./css/lslstrength.css">
 
     <title>Strength Checker</title>
 </head>
@@ -23,6 +24,8 @@
 
         <div class="field">
             <input type="password" class="password" placeholder="Password">
+            <div class="show-pass"><i class="material-icons"></i></div>
+            <div class="gen-pass">GENERATE</div>
         </div>
         <div class="progress-bar">
             <div></div>
@@ -36,6 +39,6 @@
         </div>
     </div>
 
-    <script src="/js/lslstrength.js"></script>
+    <script src="./js/lslstrength.js"></script>
 </body>
 </html>
