SHOW/HIDE & GENERATE PASSWORD FEATURES ADDED

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <div class="field">
             <input type="password" class="password" placeholder="Password">
-            <div class="show-pass"><i class="material-icons"></i></div>
             <div class="gen-pass">GENERATE</div>
+            <div class="show-pass"><i class="material-icons">visibility</i></div>
         </div>
         <div class="progress-bar">
             <div></div>
